<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/restaurant_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="15dp"
                        app:riv_mutate_background="false"
                        app:riv_tile_mode="clamp"
                        app:riv_oval="false"
                        android:src="@drawable/restaurant"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_above="@id/text_restaurant"
                        android:src="@drawable/ic_restaurant_black_24dp"
                        android:layout_marginStart="22dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/text_restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text1"
                        android:text="@string/restaurant"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"/>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/fastFood_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="15dp"
                        app:riv_mutate_background="false"
                        app:riv_tile_mode="clamp"
                        app:riv_oval="false"
                        android:adjustViewBounds="true"
                        android:src="@drawable/fast_food"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_above="@id/text_fast_food"
                        android:src="@drawable/ic_restaurant_menu_black_24dp"
                        android:layout_marginEnd="26dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/app_name"/>

                    <TextView
                        android:id="@+id/text_fast_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text6"
                        android:text="@string/fast_food"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/nav_cardViewProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/cafe_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="15dp"
                        app:riv_mutate_background="false"
                        app:riv_tile_mode="clamp"
                        app:riv_oval="false"
                        android:adjustViewBounds="true"
                        android:src="@drawable/cafe"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_above="@id/text_cafe"
                        android:src="@drawable/ic_local_cafe_black_24dp"
                        android:layout_marginStart="19dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/text_cafe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text1"
                        android:text="@string/cafe"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="16dp"/>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/hotel_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="15dp"
                    app:riv_mutate_background="false"
                    app:riv_tile_mode="clamp"
                    app:riv_oval="false"
                    android:adjustViewBounds="true"
                    android:src="@drawable/hotels"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_above="@id/text_hotel"
                    android:src="@drawable/ic_hotel_black_24dp"
                    android:layout_marginEnd="18dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/text_hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text6"
                    android:text="@string/hotel"
                    android:textSize="14sp"
                    android:fontFamily="@font/vazir"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="22dp"
                    android:layout_marginBottom="16dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/restRoom_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="15dp"
                    app:riv_mutate_background="false"
                    app:riv_tile_mode="clamp"
                    app:riv_oval="false"
                    android:adjustViewBounds="true"
                    android:src="@drawable/rest_room"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_above="@id/text_rest_room"
                    android:src="@drawable/ic_domain_black_24dp"
                    android:layout_marginStart="35dp"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/text_rest_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text1"
                    android:text="@string/rest_room"
                    android:textSize="14sp"
                    android:fontFamily="@font/vazir"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="16dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/shopCenter_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="15dp"
                    app:riv_mutate_background="false"
                    app:riv_tile_mode="clamp"
                    app:riv_oval="false"
                    android:adjustViewBounds="true"
                    android:src="@drawable/shop_center"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_above="@id/text_shop"
                    android:src="@drawable/ic_shopping_cart_black_24dp"
                    android:layout_marginEnd="36dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/text_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text6"
                    android:text="@string/shop_center"
                    android:textSize="14sp"
                    android:fontFamily="@font/vazir"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="22dp"
                    android:layout_marginBottom="16dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>